--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=myding_prototype
 APP_ENV=local
 APP_KEY=base64:wIjcoo7eP2Ly95FPJHpDS3np4EL4lxNpT3FkVQ551ag=
 APP_DEBUG=true
-APP_URL=http://myding-prototype.test
+APP_URL=http://localhost:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=myding_prototype
+DB_DATABASE=myding-prototype
 DB_USERNAME=root
 DB_PASSWORD=
 
