--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "coduo/php-humanizer": "^4.0",
+        "cviebrock/eloquent-sluggable": "^8.0",
         "fakerphp/faker": "^1.16",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
