--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=myding_prototype
+APP_NAME=Myding
 APP_ENV=local
 APP_KEY=base64:wIjcoo7eP2Ly95FPJHpDS3np4EL4lxNpT3FkVQ551ag=
 APP_DEBUG=true
